--- a/src/FrontEnd/exploreplaces/Main.css
+++ b/src/FrontEnd/exploreplaces/Main.css
@@ -97,12 +97,14 @@
 {
     margin-top: 30px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-evenly;
     gap: 30px;
 }
 
 .explorebyinterest .tabs-contents  .images .image
 {
+    text-align: left;
     width: 250px;
     height: 130px;
 }
