--- a/src/Register.css
+++ b/src/Register.css
@@ -71,3 +71,12 @@
     font-size: 20px;
     padding:10px;
  }
+
+ .data
+ {
+   display: inline-flex;
+   gap: 20px;
+   margin-left: 10px;
+   align-items: center;
+   justify-content: center;
+ }
