--- a/src/FrontEnd/homepage/Main.css
+++ b/src/FrontEnd/homepage/Main.css
@@ -5,7 +5,7 @@
 .main
 {
     margin: 10px;
-    background-color: #F6FFF6;
+    background-color:rgb(208, 216, 208);
     font-family: var(--normal-font-family);
 }
 
