--- a/src/FrontEnd/admin/customer/Main.css
+++ b/src/FrontEnd/admin/customer/Main.css
@@ -1,6 +1,4 @@
-
-
-.AdminSideMain-Page .explorebyinterest #Admin-Btn
+/* .AdminSideMain-Page .explorebyinterest #Admin-Btn
 {
     width: 300px !important;
     height: 100px !important;
@@ -31,4 +29,5 @@
     display: flex;
     flex-direction: column;
     gap: 40px;
-}
+} */
+
