--- a/src/FrontEnd/admin/toursbooked/Main.css
+++ b/src/FrontEnd/admin/toursbooked/Main.css
@@ -1,9 +1,5 @@
-
-
-.AdminSideMain-Page .explorebyinterest #Admin-Btn
+.AdminSideMain-Page 
 {
-    width: 300px !important;
-    height: 100px !important;
     font-size: larger;
 }
 
@@ -11,8 +7,7 @@
 {
     display: grid;
     grid-template-columns: repeat(4,1fr);
-    gap: 20px;
-    background-color: var(--navbar-bg-color);
+    gap: 0;
     border-radius: 4px;
     border: none;
     padding: 20px;
@@ -21,14 +16,28 @@
 .tables .column h3
 {
     margin-bottom: 20px;
+    font-size: 15px;
+    font-weight: 600;
 }
 .tables .column 
 {
-    display: block;
+    color: black;
+    display: flex !important;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
 }
 .tables .column .dynamicData 
 {
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 30px;
+    font-size: 15px;
+    font-weight: 400;
+    opacity: 0.8;
 }
+
+/* .tables .column .dynamicData td
+{
+    color: black;
+} */
